--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-pricing-table": "^0.3.0",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
     "react-stripe-checkout": "^2.6.3",
