--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
     "react-stripe-checkout": "^2.6.3",
+    "stripe": "^10.12.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
